--- a/css/styles.css
+++ b/css/styles.css
@@ -421,6 +421,12 @@ ol {
   margin-left: 30px;
   margin-top: 30px;
 }
+.pf-pj-list:hover,
+.pf-pj-list:focus {
+  cursor: pointer;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+  1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .pf-project-format {
   padding: 20px 24px;
   border: 1px solid var(--pj-border-color);
@@ -429,6 +435,8 @@ ol {
 .portfolio-btn:focus {
   color: var(--header-background-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+  0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .pf-project-title {
@@ -495,7 +503,7 @@ ol {
 .footer-social-icon {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 .footer-social-title {
   font-family: var(--main-font);
@@ -507,12 +515,28 @@ ol {
   color: var(--header-background-color);
   margin-bottom: 20px;
 }
-.footer-social-link:not(:last-child) {
+.footer-social-link-icon:not(:last-child) {
   margin-right: 10px;
 }
-.footer-social-icon-list:not(:last-child) {
+.address-footer-link-item:not(:last-child) {
   margin-bottom: 9px;
 }
+.footer-social-link:hover,
+.footer-social-link:focus {
+  fill: var(--header-background-color);
+  background-color: var(--accent-color);
+}
+.footer-social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  fill: var(--header-background-color);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
 .logo-footer {
   font-family: var(--secondary-font);
   font-style: normal;
